# local-agent-snipper

./: .env.example  .gitignore  CONFIG_SAMPLE.yaml  Dockerfile  Project_Documentation.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: config.yaml
docs/: placeholder.txt
scripts/: seed_data.py  setup_db.py
src/: main.py
src/analyzers/: composite_scorer.py  demand_analyzer.py  trend_analyzer.py
src/api/: main.py
src/api/routes/: alerts.py  config.py  deals.py  listings.py
src/api/schemas/: deal_schema.py  listing_schema.py
src/core/: config.py  database.py  exceptions.py
src/evaluators/: deal_scorer.py  margin_calculator.py  sniper_bot.py
src/models/: __init__.py  alert.py  deal.py  listing.py  trend.py
src/scrapers/: base_scraper.py  craigslist_scraper.py  facebook_scraper.py  offerup_scraper.py
src/scrapers/utils/: anti_detection.py  proxy_manager.py  rate_limiter.py
src/utils/: helpers.py  logger.py  validators.py
src/workers/: alert_worker.py  analysis_worker.py  scraping_worker.py
