[project]
name = "local-sniper-agent"
version = "0.1.0"
description = "MVP framework for scraping, analysis, and deal evaluation."
readme = "README.md"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "B", "UP"]
ignore = [
  "E501",  # handled by black
]
extend-exclude = [
  "migrations",
]

[tool.ruff.isort]
known-first-party = ["src"]
combine-as-imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
  "tests",
]
pythonpath = [
  "src"
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
